--- a/VotingWebApp/Views/Komitet/Create.cshtml
+++ b/VotingWebApp/Views/Komitet/Create.cshtml
@@ -18,11 +18,6 @@
                 <span asp-validation-for="Nazwa" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LogoNazwa" class="control-label"></label>
-                <input asp-for="LogoNazwa" class="form-control" />
-                <span asp-validation-for="LogoNazwa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="NrListy" class="control-label"></label>
                 <input asp-for="NrListy" class="form-control" />
                 <span asp-validation-for="NrListy" class="text-danger"></span>
@@ -39,5 +34,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
