--- a/VotingWebApp/Views/CzlonekKomisji/Index.cshtml
+++ b/VotingWebApp/Views/CzlonekKomisji/Index.cshtml
@@ -47,7 +47,7 @@
                     @Html.DisplayFor(modelItem => item.Haslo)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Obwod.ID)
+                    @Html.DisplayFor(modelItem => item.Obwod.NazwaObwodu)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
