--- a/VotingWebApp/Views/Kandydat/Index.cshtml
+++ b/VotingWebApp/Views/Kandydat/Index.cshtml
@@ -56,10 +56,10 @@
                     @Html.DisplayFor(modelItem => item.czySenat)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Okreg.ID)
+                    @Html.DisplayFor(modelItem => item.Okreg.Nazwa)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Komitet.ID)
+                    @Html.DisplayFor(modelItem => item.Komitet.Nazwa)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
