Completed voting funcionality on android app part

--- a/VotingAndroidApp/app/src/main/res/layout/activity_potwierdzenie_wyboru.xml
+++ b/VotingAndroidApp/app/src/main/res/layout/activity_potwierdzenie_wyboru.xml
@@ -25,30 +25,18 @@
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque condimentum cursus tortor viverra dapibus. Maecenas molestie nunc eu eros cursus condimentum"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/SurnameTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/NameTextView" />
 
     <TextView
         android:id="@+id/NameTextView"
-        android:layout_width="230dp"
+        android:layout_width="460dp"
         android:layout_height="60dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="130dp"
-        android:text=" imie"
-        android:textAlignment="textEnd"
+        android:text="Imie Nazwisko"
+        android:textAlignment="center"
         android:textSize="34sp"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <TextView
-        android:id="@+id/SurnameTextView"
-        android:layout_width="230dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="130dp"
-        android:text=" nazwisko"
-        android:textAlignment="textStart"
-        android:textSize="34sp"
-        app:layout_constraintStart_toEndOf="@+id/NameTextView"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <ImageView
