--- a/VotingAndroidApp/app/src/main/res/layout/activity_wybor_senatu.xml
+++ b/VotingAndroidApp/app/src/main/res/layout/activity_wybor_senatu.xml
@@ -11,7 +11,7 @@
         android:layout_width="1220dp"
         android:layout_height="148dp"
         android:layout_marginTop="40dp"
-        android:text="Wybierz Senat"
+        android:text="Wybierz partię do senatu"
         android:textAlignment="center"
         android:textSize="96sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/textView5"
         android:layout_width="1003dp"
         android:layout_height="88dp"
-        android:text="Senat można wybrać tylko JEDEN"
+        android:text="Partię można wybrać tylko JEDEN"
         android:textAlignment="center"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:id="@+id/textView6"
         android:layout_width="1230dp"
         android:layout_height="52dp"
-        android:text="Proszę kliknąć na zdjęcie lub wybrany senat. Listę należy przewijać w dół palcem"
+        android:text="Proszę kliknąć na zdjęcie lub nazwę. Listę należy przewijać w dół palcem"
         android:textAlignment="center"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
