--- a/VotingAndroidApp/app/src/main/res/layout/activity_potwierdzenie_kodu2.xml
+++ b/VotingAndroidApp/app/src/main/res/layout/activity_potwierdzenie_kodu2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Voter.Sejm.PonownePotwierdzenieKodu">
+    tools:context=".Voter.Senat.PonownePotwierdzenieKodu2">
 
 
     <TextView
@@ -12,7 +12,7 @@
         android:layout_width="1249dp"
         android:layout_height="238dp"
         android:layout_marginTop="40dp"
-        android:text="Podaj kod logowania w celu oddania głosu na posła"
+        android:text="Podaj kod logowania w celu oddania głosu na senatora"
         android:textAlignment="center"
         android:textSize="96sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,4 +48,5 @@
         app:layout_constraintEnd_toEndOf="@+id/editTextCode"
         app:layout_constraintStart_toStartOf="@+id/editTextCode"
         app:layout_constraintTop_toBottomOf="@+id/editTextCode" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
