--- a/VotingAndroidApp/app/src/main/res/layout/kandydat_senatu_view.xml
+++ b/VotingAndroidApp/app/src/main/res/layout/kandydat_senatu_view.xml
@@ -6,24 +6,10 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp">
 
-    <TextView
-        android:id="@+id/NazwiskoTextView"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:gravity="center"
-        android:text="Nazwisko"
-        android:textAlignment="viewStart"
-        android:textSize="34sp"
-        app:layout_constraintStart_toEndOf="@+id/ImieTextView"
-        app:layout_constraintTop_toBottomOf="@+id/divider" />
-
     <ImageView
         android:id="@+id/ZdjecieKandydata"
         android:layout_width="150dp"
         android:layout_height="150dp"
-
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textSize="20dp"
@@ -42,13 +28,14 @@
 
     <TextView
         android:id="@+id/ImieTextView"
-        android:layout_width="150dp"
+        android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
         android:gravity="center"
-        android:text="imie"
-        android:textAlignment="textEnd"
+        android:text="Imie Nazwisko"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintStart_toEndOf="@+id/ZdjecieKandydata"
         app:layout_constraintTop_toBottomOf="@+id/divider" />
@@ -70,9 +57,10 @@
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque condimentum cursus tortor viverra dapibus. Maecenas molestie nunc eu eros cursus condimentum. Quisque imperdiet euismod faucibus. Nulla eu odio luctus, pellentesque augue sed, consequat sapien. Sed gravida nunc ut tincidunt viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi suscipit leo et massa tristique sodales. Integer dui risus, vehicula semper diam id, maximus semper felis."
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/ZdjecieKandydata"
-        app:layout_constraintTop_toBottomOf="@+id/NazwiskoTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/ImieTextView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
