--- a/VotingAndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/VotingAndroidApp/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="48dp"
         android:text="Wybory parlamentarne"
         android:textAlignment="center"
         android:textSize="96sp"
@@ -23,7 +23,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:text="Wpisz swój kod"
         android:textAlignment="center"
         android:textSize="60sp"
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.15" />
 
     <Button
         android:id="@+id/button"
@@ -55,7 +55,7 @@
         android:padding="16dp"
         android:text="Przejdź dalej"
         android:textAlignment="center"
-        android:textSize="48sp"
+        android:textSize="56sp"
         app:layout_constraintEnd_toEndOf="@+id/editTextCode"
         app:layout_constraintStart_toStartOf="@+id/editTextCode"
         app:layout_constraintTop_toBottomOf="@+id/editTextCode" />
@@ -68,7 +68,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.33" />
+
+    <Button
+        android:id="@+id/komisjaBtn"
+        android:layout_width="420dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:text="Czlonek komisji"
+        android:textSize="42sp"
+        android:padding="12dp"
+        android:lines="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.8" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
