Changed wording of certain objects

--- a/VotingWebApp/Views/Shared/_Layout.cshtml
+++ b/VotingWebApp/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                         <li class="nav-item"><a class="nav-link text-white" asp-controller="Komitet" asp-action="Index">Komitety</a></li>
                         <li class="nav-item"><a class="nav-link text-white" asp-controller="Obwod" asp-action="Index">Obwody</a></li>
                         <li class="nav-item"><a class="nav-link text-white" asp-controller="Okreg" asp-action="Index">Okręgi wyborcze</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" asp-controller="WynikiGlosowania" asp-action="Index">Wyniki głosowania</a></li>
                     }
                 </ul>
                 @if (User.Identity.IsAuthenticated)
