--- a/VotingAndroidApp/app/src/main/res/layout/activity_podziekowanie_izablokowanie.xml
+++ b/VotingAndroidApp/app/src/main/res/layout/activity_podziekowanie_izablokowanie.xml
@@ -16,4 +16,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/resetBtn"
+        android:layout_width="600dp"
+        android:layout_height="wrap_content"
+        android:text="Oddaj głos"
+        android:textSize="64sp"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
